@@ -4,6 +4,10 @@ repoze.who Changelog
 After 2.0a3 (unreleased)
 ------------------------
 
+- Ensure that the middleware calls ``close()`` (if it exists) on the
+  iterable returned from thw wrapped application, as required by PEP 333.
+  http://bugs.repoze.org/issue174
+
 - Make ``make_api_factory_with_config`` tolerant of invalid filenames /
   content for the config file:  in such cases, the API factory will have
   *no* configured plugins or policies:  it will only be useful for retrieving
